--- a/analysis/multi_group_compare_predictdb_munro_4weights_8weights.Rmd
+++ b/analysis/multi_group_compare_predictdb_munro_4weights_8weights.Rmd
@@ -272,7 +272,12 @@ make_locusplot(finemap_res_4weights,
                legend.position = "right",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 
+df_region <- finemap_res_4weights[finemap_res_4weights$region_id =="20_63558827_64333810",]
+DT::datatable(df_region[df_region$susie_pip > 0.8,],caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','The two SNPs with high PIP'),options = list(pageLength = 10) )
+
+
 ```
+
 
 ```{r echo=FALSE, warning=F, message=FALSE, fig.height=15}
 print("Locus plot -- 8 weights setting")
@@ -291,4 +296,35 @@ make_locusplot(finemap_res_8weights,
                R_gene = cor_res$R_gene,legend.position = "right",
                point.shapes = c(16, 15, 18, 17,14,11,6,8,9))
 
+df_gene <- finemap_res_8weights[finemap_res_8weights$gene_name == "TNFRSF6B",]
+df_gene <- df_gene[complete.cases(df_gene$gene_name),]
+
+DT::datatable(df_gene,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;','The molecular traits associated with TNFRSF6B'),options = list(pageLength = 10) )
+
+
+for (i in 1:nrow(df_gene)) {
+  
+  print("weights for ")
+  print(df_gene$id[i])
+  print(weights_8weights[[df_gene$id[[i]]]]$wgt)
+
+}
+
+
 ```
+
+The LD for the high pip SNPs in 4 weights setting and the sQTLs in 8 weights setting. The SNPs in row1 and row2 (column1 and column2) are the high pip SNPs in 4 weights setting.
+
+We notice that, the 2 high pip SNPs are in LD themselves. And they are in LD with rs6011040 and rs8957, the sQTL for ENSG00000243509:chr20:63695854:63696760:clu_44474_+|splicing_Colon_Transverse, whose susie pip = 7.516698e-11 in 8 weights setting. 
+
+
+|  RS_number  | rs6089961 | rs202143810 | rs41298344 | rs55765053 | rs6062496 | rs74748720 | rs6011040 | rs8957 |
+|:-----------:|-----------|-------------|:----------:|:----------:|-----------|------------|-----------|--------|
+| rs6089961   | 1.0       | 0.963       | 0.164      | 0.021      | 0.364     | 0.009      | 0.592     | 0.447  |
+| rs202143810 | 0.963     | 1.0         | 0.152      | 0.02       | 0.35      | 0.008      | 0.569     | 0.445  |
+| rs41298344  | 0.164     | 0.152       | 1.0        | 0.004      | 0.071     | 0.002      | 0.103     | 0.128  |
+| rs55765053  | 0.021     | 0.02        | 0.004      | 1.0        | 0.055     | 0.003      | 0.034     | 0.028  |
+| rs6062496   | 0.364     | 0.35        | 0.071      | 0.055      | 1.0       | 0.023      | 0.611     | 0.486  |
+| rs74748720  | 0.009     | 0.008       | 0.002      | 0.003      | 0.023     | 1.0        | 0.014     | 0.012  |
+| rs6011040   | 0.592     | 0.569       | 0.103      | 0.034      | 0.611     | 0.014      | 1.0       | 0.791  |
+| rs8957      | 0.447     | 0.445       | 0.128      | 0.028      | 0.486     | 0.012      | 0.791     | 1.0    |
